@@ -14,6 +14,7 @@ Changelog for LedgerSMB 1.3.6
 * Fixed SQL errors in Goods and Services/All Items report (David B)
 * Corrected issue saving country in contact.html (Pongracz I)
 * Corrected permission denied to partsgroup_id_seq (Chris T)
+* Corrected discount_terms not being displayed after saving (Chris T)
 
 Chris T is Chris Travers
 David B is David Bandel
